Fix scrollbar in sidebar

--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -10494,6 +10494,9 @@ h2.title {
       margin-top: 10px;
       margin-bottom: 10px; }
 
+      .perfect-scrollbar-on .sidebar {
+        height: 100%;
+        max-height: 100%; }
 
 .sidebar,
 .main-panel,
@@ -13152,9 +13155,17 @@ Copyright (c) 2015 Daniel Eden
   cursor:pointer;
 }
 
-.editor{
-  height:200px;
-}
+.user-text { /*User and team in sidebar*/
+  display: inline-block;
+  font-size: 16px;
+  color: #3C4858;
+  white-space: nowrap;
+  font-weight: 400;
+  line-height: 30px;
+  overflow: hidden;
+  text-align: center;
+  display: block;
+  margin-left: 10px;}
 
 .avatar{
   border-radius: 50%;
